--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -939,30 +939,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "3a96beaa",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"<class 'pandas.core.frame.DataFrame'>\\nRangeIndex: 4 entries, 0 to 3\\nData columns (total 3 columns):\\n #   Column  Non-Null Count  Dtype \\n---  ------  --------------  ----- \\n 0   Name    4 non-null      object\\n 1   Age     4 non-null      int64 \\n 2   City    4 non-null      object\\ndtypes: int64(1), object(2)\\nmemory usage: 228.0+ bytes\\n\""
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===== Generated Visualization Code =====\n",
+      "\n",
+      "```python\n",
+      "import pandas as pd\n",
+      "import seaborn as sns\n",
+      "import matplotlib.pyplot as plt\n",
+      "\n",
+      "df = book1.copy()\n",
+      "print(df.info())\n",
+      "\n",
+      "age_mean = df['Age'].mean()\n",
+      "age_std = df['Age'].std()\n",
+      "\n",
+      "plt.figure(figsize=(10,6))\n",
+      "sns.countplot(data=df, x='City')\n",
+      "plt.title('City Distribution')\n",
+      "plt.show()\n",
+      "\n",
+      "plt.figure(figsize=(10,6))\n",
+      "sns.histplot(data=df, x='Age', kde=True)\n",
+      "plt.title('Age Distribution')\n",
+      "plt.axvline(age_mean, color='r', linestyle='dashed', label='Mean')\n",
+      "plt.legend()\n",
+      "plt.show()\n",
+      "```\n",
+      "\n",
+      "===== Executing Code =====\n",
+      "\n",
+      "Error executing ````python`: invalid syntax (<string>, line 1)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Name    4 non-null      object\n",
+      " 1   Age     4 non-null      int64 \n",
+      " 2   City    4 non-null      object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 228.0+ bytes\n",
+      "None\n",
+      "Error executing `````: invalid syntax (<string>, line 1)\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "import os\n",
+    "import io\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "def capture_df_info(df: pd.DataFrame) -> str:\n",
+    "    \"\"\"\n",
+    "    Capture the output of df.info() into a string.\n",
+    "    \"\"\"\n",
+    "    buffer = io.StringIO()\n",
+    "    df.info(buf=buffer)\n",
+    "    return buffer.getvalue()\n",
+    "\n",
+    "def generate_visualization_code(df_infos: dict, purpose: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Given a mapping of dataframe names to their info-strings and an analysis purpose,\n",
+    "    returns only the seaborn/matplotlib code needed for the visualization.\n",
+    "    \"\"\"\n",
+    "    prompt_template = \"\"\"\n",
+    "You are a data analysis expert. The user has these dataframes (with info shown) \n",
+    "and wants to achieve a given analysis purpose.\n",
+    "\n",
+    "### Instructions:\n",
+    "1) Do NOT tamper with original dataframes; use df.copy() if needed.\n",
+    "2) Always reference df.info() to confirm column names and dtypes.\n",
+    "3) Do NOT hallucinate column names: only use those present.\n",
+    "4) Recommend the single best chart or minimal set of charts.\n",
+    "5) If merging is needed, do it within the sns call.\n",
+    "6) Do all data calculations on separate lines before plotting.\n",
+    "7) Output ONLY the Python code lines (no comments, no narrative ,no preamble).\n",
+    "\n",
+    "### DataFrames Info:\n",
+    "{df_infos}\n",
+    "\n",
+    "### Purpose of Analysis:\n",
+    "{purpose}\n",
+    "\n",
+    "\n",
+    "### Example output code:\n",
+    "\n",
+    "import pandas\n",
+    "import numpy\n",
+    "\n",
+    "df.info()\n",
+    "\"\"\"\n",
+    "    template = PromptTemplate(\n",
+    "        input_variables=[\"df_infos\", \"purpose\"],\n",
+    "        template=prompt_template\n",
+    "    )\n",
+    "    chain = template|llm\n",
+    "    code = chain.invoke({\n",
+    "        \"df_infos\": df_infos,\n",
+    "        \"purpose\": purpose\n",
+    "    })\n",
+    "    return code.content.strip()\n",
+    "\n",
+    "def main():\n",
+    "    # 1) Load CSV files from a directory or list\n",
+    "    csv_dir = \"/workspaces/new_rag/data\"  # update this path if needed\n",
+    "    dfs = {}\n",
+    "    df_infos = {}\n",
+    "    for fname in os.listdir(csv_dir):\n",
+    "        if fname.lower().endswith(\".csv\"):\n",
+    "            path = os.path.join(csv_dir, fname)\n",
+    "            name = os.path.splitext(fname)[0]\n",
+    "            df = pd.read_csv(path)\n",
+    "            dfs[name] = df\n",
+    "            df_infos[name] = capture_df_info(df)\n",
+    "\n",
+    "    # 2) Get analysis purpose from user input\n",
+    "    purpose = input(\"Enter the purpose of analysis: \").strip()\n",
+    "    if not purpose:\n",
+    "        print(\"No purpose entered. Exiting.\")\n",
+    "        return\n",
+    "\n",
+    "    # 3) Generate visualization code\n",
+    "    code = generate_visualization_code(df_infos, purpose)\n",
+    "    print(\"\\n===== Generated Visualization Code =====\\n\")\n",
+    "    print(code)\n",
+    "    print(\"\\n===== Executing Code =====\\n\")\n",
+    "\n",
+    "    # 4) Execute and display plots\n",
+    "    #    This will show plots in a matplotlib window\n",
+    "    global_vars = dfs.copy()\n",
+    "    for line in code.splitlines():\n",
+    "        try:\n",
+    "            # Execute any preprocessing or new column creation\n",
+    "            if not line.lstrip().startswith((\"sns.\", \"plt.\")):\n",
+    "                exec(line, global_vars)\n",
+    "            else:\n",
+    "                plt.figure(figsize=(10, 6))\n",
+    "                exec(line, global_vars)\n",
+    "                plt.show()\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error executing `{line}`: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "4661183b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"/workspaces/new_rag/data/book1.csv\",index=False)"
+   ]
   },
   {
    "cell_type": "code",
