--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1120,7 +1120,9 @@
    "id": "8fcc73c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "/workspaces/new_rag/research/tools/helpers.py"
+   ]
   },
   {
    "cell_type": "code",
