--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1240,7 +1240,9 @@
    "id": "121b5f76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from "
+   ]
   },
   {
    "cell_type": "code",
