--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1097,21 +1097,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8fcc73c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'research'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas_tool, sql_tool, rag_tool\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/new_rag/research/tools/pandas_tool.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tool\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstate\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GraphState\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpandas_tool\u001b[39m(state: GraphState):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/new_rag/research/tools/state.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mresearch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# from research.tools import pandas_tool, sql_tool\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'research'"
+     ]
+    }
+   ],
    "source": [
-    "/workspaces/new_rag/research/tools/helpers.py"
+    "from typing import List, Annotated\n",
+    "from typing_extensions import TypedDict\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "from pydantic import BaseModel, Field\n",
+    "from typing import Literal\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from tools import pandas_tool, sql_tool, rag_tool\n",
+    "import argparse\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "32a0e96b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pandas_tool_node' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     15\u001b[39m graph = StateGraph(GraphState)\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Add nodes for the tools and input (assuming pandas_tool and sql_tool are defined elsewhere as Runnables or tools)\u001b[39;00m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Make sure pandas_tool and sql_tool are callable objects (like LangChain tools or Runnables)\u001b[39;00m\n\u001b[32m     19\u001b[39m graph.add_node(\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mpandas_tool\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mpandas_tool_node\u001b[49m\n\u001b[32m     21\u001b[39m )  \u001b[38;5;66;03m# Assuming pandas_tool is a defined tool or Runnable\u001b[39;00m\n\u001b[32m     22\u001b[39m graph.add_node(\n\u001b[32m     23\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33msql_tool\u001b[39m\u001b[33m\"\u001b[39m, sql_tool_node\n\u001b[32m     24\u001b[39m )  \u001b[38;5;66;03m# Assuming sql_tool is a defined tool or Runnable\u001b[39;00m\n\u001b[32m     26\u001b[39m graph.add_node(\u001b[33m\"\u001b[39m\u001b[33mrag_tool\u001b[39m\u001b[33m\"\u001b[39m, rag_tool_node)\n",
+      "\u001b[31mNameError\u001b[39m: name 'pandas_tool_node' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class GraphState(TypedDict):\n",
+    "    \"\"\"\n",
+    "    Represents the state of our graph.\n",
+    "\n",
+    "    Attributes:\n",
+    "        messages: A list of messages exchanged in the conversation.\n",
+    "        inputs: The current user input.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    messages: Annotated[List, add_messages]\n",
+    "    inputs: str\n",
+    "\n",
+    "\n",
+    "# Define the nodes and edges of the graph\n",
+    "graph = StateGraph(GraphState)\n",
+    "\n",
+    "# Add nodes for the tools and input (assuming pandas_tool and sql_tool are defined elsewhere as Runnables or tools)\n",
+    "# Make sure pandas_tool and sql_tool are callable objects (like LangChain tools or Runnables)\n",
+    "graph.add_node(\n",
+    "    \"pandas_tool\", pandas_tool_node\n",
+    ")  # Assuming pandas_tool is a defined tool or Runnable\n",
+    "graph.add_node(\n",
+    "    \"sql_tool\", sql_tool_node\n",
+    ")  # Assuming sql_tool is a defined tool or Runnable\n",
+    "\n",
+    "graph.add_node(\"rag_tool\", rag_tool_node)\n",
+    "# Define an input node (this might not be necessary if you start directly with a tool/router,\n",
+    "# but keeping it for structure based on your original code)\n",
+    "graph.add_node(\"input\", inputs_node)  # A simple node to process initial input\n",
+    "graph.add_node(\"router\", router)\n",
+    "# Define a router function (you need to implement the logic for routing)\n",
+    "# This function will decide which node to go to next based on the state\n",
+    "\n",
+    "\n",
+    "# Set the entry point of the graph\n",
+    "graph.add_edge(START, \"input\")\n",
+    "\n",
+    "# Add edges\n",
+    "graph.add_conditional_edges(\n",
+    "    \"input\",  # From the \"input\" node\n",
+    "    router,\n",
+    "    {\n",
+    "        \"pandas\": \"pandas_tool\",\n",
+    "        \"sql\": \"sql_tool\",\n",
+    "        \"rag\": \"rag_tool\",\n",
+    "    } # Routing logic based on the choice\n",
+    "    # Use the router function to decide the next node\n",
+    ")\n",
+    "\n",
+    "# Add edges from the tool nodes to the end (or another node if needed)\n",
+    "graph.add_edge(\"input\", \"router\")\n",
+    "\n",
+    "\n",
+    "graph.add_edge(\"pandas_tool\", END)\n",
+    "graph.add_edge(\"sql_tool\", END)\n",
+    "graph.add_edge(\"rag_tool\", END)\n",
+    "\n",
+    "\n",
+    "# Compile the graph\n",
+    "app = graph.compile()"
+   ]
   },
   {
    "cell_type": "code",
