--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1097,8 +1097,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8fcc73c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Annotated\n",
+    "from typing_extensions import TypedDict\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "from pydantic import BaseModel, Field\n",
+    "from typing import Literal\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from tools import *\n",
+    "import argparse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc9da978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "research/tools/rag_tool.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc1c9308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/workspaces/new_rag/research/tools/sql_tool.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "405829fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "32a0e96b",
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1156,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas_tool, sql_tool, rag_tool\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas_tool, sql_tool, rag_tool\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Replace with the actual LLM library you're using\u001b[39;00m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/new_rag/research/tools/pandas_tool.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tool\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstate\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GraphState\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpandas_tool\u001b[39m(state: GraphState):\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/new_rag/research/tools/state.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mresearch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# from research.tools import pandas_tool, sql_tool\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n",
       "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'research'"
@@ -1125,29 +1173,72 @@
     "from pydantic import BaseModel, Field\n",
     "from typing import Literal\n",
     "from langchain_core.prompts import PromptTemplate\n",
+    "from helpers import LLM\n",
     "from tools import pandas_tool, sql_tool, rag_tool\n",
-    "import argparse\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "32a0e96b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pandas_tool_node' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     15\u001b[39m graph = StateGraph(GraphState)\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Add nodes for the tools and input (assuming pandas_tool and sql_tool are defined elsewhere as Runnables or tools)\u001b[39;00m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Make sure pandas_tool and sql_tool are callable objects (like LangChain tools or Runnables)\u001b[39;00m\n\u001b[32m     19\u001b[39m graph.add_node(\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mpandas_tool\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mpandas_tool_node\u001b[49m\n\u001b[32m     21\u001b[39m )  \u001b[38;5;66;03m# Assuming pandas_tool is a defined tool or Runnable\u001b[39;00m\n\u001b[32m     22\u001b[39m graph.add_node(\n\u001b[32m     23\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33msql_tool\u001b[39m\u001b[33m\"\u001b[39m, sql_tool_node\n\u001b[32m     24\u001b[39m )  \u001b[38;5;66;03m# Assuming sql_tool is a defined tool or Runnable\u001b[39;00m\n\u001b[32m     26\u001b[39m graph.add_node(\u001b[33m\"\u001b[39m\u001b[33mrag_tool\u001b[39m\u001b[33m\"\u001b[39m, rag_tool_node)\n",
-      "\u001b[31mNameError\u001b[39m: name 'pandas_tool_node' is not defined"
-     ]
-    }
-   ],
-   "source": [
+    "import argparse\n",
+    "\n",
+    "\n",
+    "# Replace with the actual LLM library you're using\n",
+    "class GraphState(TypedDict):\n",
+    "    \"\"\"\n",
+    "    Represents the state of our graph.\n",
+    "\n",
+    "    Attributes:\n",
+    "        messages: A list of messages exchanged in the conversation.\n",
+    "        inputs: The current user input.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    messages: Annotated[List, add_messages]\n",
+    "    inputs: str\n",
+    "    choice: str\n",
+    "\n",
+    "\n",
+    "class Choice(BaseModel):\n",
+    "    choice: Literal[\"pandas\", \"sql\", \"rag\"] = Field(\n",
+    "        description=\"Based on the user input, LLM must return one of the literals.\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def inputs_node(state: GraphState) -> str:\n",
+    "    state[\"inputs\"] = input(\"Enter your query: \")\n",
+    "\n",
+    "    prompt_template = f\"\"\"You are given a user input: {state[\"inputs\"]}. Based on the input, you have to decide whether it is a SQL question or a visualization question.\"\"\"\n",
+    "    formatted_prompt = PromptTemplate(\n",
+    "        template=prompt_template, input_variables=[\"input\"]\n",
+    "    )\n",
+    "    # formatted_prompt = prompt.format(input=state[\"inputs\"])\n",
+    "\n",
+    "    llm_str = LLM().llm.with_structured_output(Choice)\n",
+    "    chain = (\n",
+    "        formatted_prompt | llm_str\n",
+    "    )  # Assuming this is the correct way to chain the prompt with the LLM\n",
+    "\n",
+    "    response = chain.invoke({\"input\": state[\"inputs\"]})\n",
+    "    state[\"choice\"] = response\n",
+    "\n",
+    "    return state\n",
+    "\n",
+    "\n",
+    "pandas_tool_node = ToolNode([pandas_tool.pandas_tool])\n",
+    "sql_tool_node = ToolNode([sql_tool.pandasql_tool])\n",
+    "rag_tool_node = ToolNode([rag_tool.rag_tool])\n",
+    "\n",
+    "\n",
+    "def router(state: GraphState) -> str:\n",
+    "    \"\"\"\n",
+    "    Routes the input to the appropriate tool based on keywords.\n",
+    "    Must return a dict with a key matching the conditional edge.\n",
+    "    \"\"\"\n",
+    "    choice = state[\"inputs\"].lower()\n",
+    "    if \"pandas\" in choice:\n",
+    "        return \"pandas\"\n",
+    "    elif \"sql\" in choice:\n",
+    "        return \"sql\"\n",
+    "    else:\n",
+    "        return \"rag\"\n",
+    "\n",
+    "\n",
+    "# Define the graph state\n",
     "class GraphState(TypedDict):\n",
     "    \"\"\"\n",
     "    Represents the state of our graph.\n",
@@ -1193,7 +1284,7 @@
     "        \"pandas\": \"pandas_tool\",\n",
     "        \"sql\": \"sql_tool\",\n",
     "        \"rag\": \"rag_tool\",\n",
-    "    } # Routing logic based on the choice\n",
+    "    },  # Routing logic based on the choice\n",
     "    # Use the router function to decide the next node\n",
     ")\n",
     "\n",
@@ -1207,7 +1298,13 @@
     "\n",
     "\n",
     "# Compile the graph\n",
-    "app = graph.compile()"
+    "app = graph.compile()\n",
+    "\n",
+    "\n",
+    "# You can now invoke the graph with an initial state\n",
+    "# initial_state = {\"messages\": [], \"inputs\": \"analyze this data using pandas\"}\n",
+    "# result = app.invoke(initial_state)\n",
+    "# print(result)\n"
    ]
   },
   {
