--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "32a0e96b",
    "metadata": {},
    "outputs": [
@@ -1156,9 +1156,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas_tool, sql_tool, rag_tool\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Replace with the actual LLM library you're using\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/new_rag/research/tools/pandas_tool.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tool\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstate\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GraphState\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mpandas_tool\u001b[39m(state: GraphState):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/new_rag/research/tools/state.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Literal\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mresearch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# from research.tools import pandas_tool, sql_tool\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mhelpers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLM\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mresearch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas_tool, sql_tool, rag_tool\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01margparse\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Replace with the actual LLM library you're using\u001b[39;00m\n",
       "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'research'"
      ]
     }
@@ -1174,7 +1172,7 @@
     "from typing import Literal\n",
     "from langchain_core.prompts import PromptTemplate\n",
     "from helpers import LLM\n",
-    "from tools import pandas_tool, sql_tool, rag_tool\n",
+    "from research.tools import pandas_tool, sql_tool, rag_tool\n",
     "import argparse\n",
     "\n",
     "\n",
@@ -1309,35 +1307,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4817d4a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class GraphState(TypedDict):\n",
+    "    \"\"\"\n",
+    "    Represents the state of our graph.\n",
+    "\n",
+    "    Attributes:\n",
+    "        messages: A list of messages exchanged in the conversation.\n",
+    "        inputs: The current user input.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    messages: Annotated[List, add_messages]\n",
+    "    inputs: str\n",
+    "    choice: str\n",
+    "\n",
+    "\n",
+    "class Choice(BaseModel):\n",
+    "    choice: Literal[\"pandas\", \"sql\", \"rag\"] = Field(\n",
+    "        description=\"Based on the user input, LLM must return one of the literals.\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def inputs_node(state: GraphState) -> str:\n",
+    "    state[\"inputs\"] = input(\"Enter your query: \")\n",
+    "\n",
+    "    prompt_template = f\"\"\"You are given a user input: {state[\"inputs\"]}. Based on the input, you have to decide whether it is a SQL question or a visualization question.\"\"\"\n",
+    "    formatted_prompt = PromptTemplate(\n",
+    "        template=prompt_template, input_variables=[\"input\"]\n",
+    "    )\n",
+    "    # formatted_prompt = prompt.format(input=state[\"inputs\"])\n",
+    "\n",
+    "    llm_str = LLM().llm.with_structured_output(Choice)\n",
+    "    chain = (\n",
+    "        formatted_prompt | llm_str\n",
+    "    )  # Assuming this is the correct way to chain the prompt with the LLM\n",
+    "\n",
+    "    response = chain.invoke({\"input\": state[\"inputs\"]})\n",
+    "    #state[\"choice\"] = response\n",
+    "\n",
+    "    return response"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a19106b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "response=inputs_node({\"messages\": [], \"inputs\": \"analyze this data using pandas\"})    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f03a1e34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'rag'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.choice"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a932958f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': [],\n",
+       " 'inputs': 'no of people in the list',\n",
+       " 'choice': Choice(choice='sql')}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
   },
   {
    "cell_type": "code",
